Fix resource duplication when any tag is selected

It looks like we switch the model when a a tag is selected, so this
model should also perform the group-by-based deduplication.

BUG:446705
(cherry picked from commit e23a445df24079c5b23a4055341cc6c67e46f73b)